fix icon clipping

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -1438,6 +1438,7 @@ ul.checklist {
 
     &:last-child {
       border-bottom: 0;
+      padding-bottom: 2.5em;
     }
 
     &.icon-person {
